# NeuroSync_Player

./: .gitignore  README.md  WIP_realtime_llm_to_face.py  aurel.py  llm_to_face.py  load_openai_api_key.py  pyproject.toml
chat_logs/: chat_history.json
utils/audio/: record_audio.py
utils/llm/: realtime_api_utils.py
