[project]
name = "neurosync-player"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "keyboard>=0.13.5",
    "librosa>=0.10.2.post1",
    "openai[realtime]>=1.66.0",
    "pandas>=2.2.3",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "pygame>=2.6.1",
    "python-dotenv>=1.0.1",
    "timecode>=1.4.1",
]
